-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 4.7.4
-
Fix Version/s: 4.8.3, 5.0.0 Beta 1
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Environment:Windows / Linux + Qt 4.7.4 (can also be reproduced with older Qt 4.7.x)
-
Commits:1de75716d6f0691cc57feb21768f250236eebfd4 (4.8), 98ed9ba14a91c941d48cc5c946c4df1d7ed47945(4.8), 7982f6ad2703e13edbf80d55e537871bf1cd548d (4.8)
Precondition: list widget includes so many items that scroll bars are visible. Part of the items are hidden.
(attached test application: list widget includes 30 items, 15 of them are hidden by default)
- scroll between the items by using key up / key down key:
1) set the focus to the last item on the list ('Item 28') and start scrolling with key up. When focus is moved from 'Item 16' to 'Item 14' the focused item is no more visible on the list widget.
2) Press 'Spacing on/off' button --> spacing 5 is set to the list widget. Set the focus to the first item on the list ('Item 0'). Start scrolling with key down. When focus is moved from 'Item 14' to 'Item 16' the focused item is no more visible on the list widget.